# lidar-sync-mimics-gps

./: .gitignore  .gitmodules  README.md
firmware/: .cproject  .mxproject  .project  firmware.ioc
firmware/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/Debug/: firmware.elf  firmware.list  firmware.map  makefile  objects.list  sources.mk
firmware/Debug/Core/Src/: main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
firmware/Debug/Core/Startup/: subdir.mk
firmware/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_rtc.d  stm32f4xx_hal_rtc.su  stm32f4xx_hal_rtc_ex.d  stm32f4xx_hal_rtc_ex.su  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.d  subdir.mk
ros_ws/src/: README.md
ros_ws/src/data_collection/: CMakeLists.txt  package.xml
ros_ws/src/data_collection/launch/: data_collection.launch  mcu-imu.launch
ros_ws/src/mcu_interface/: CMakeLists.txt  package.xml
ros_ws/src/mcu_interface/src/: mcu.cpp
