<?xml version="1.0"?>
<package format="2">
  <name>mcu_interface</name>
  <version>0.0.0</version>
  <description>mcu_interface</description>

  <maintainer email="g.ferrer@skoltech.ru">Gonzalo Ferrer</maintainer>
  <maintainer email="marsel.faizullin@skoltech.ru">Faizullin Marsel</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>COPYRIGHT_SKOLTECH</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website">https://github.com/MobileRoboticsSkoltech/</url>
  <url type="website">https://sites.skoltech.ru/mobilerobotics/</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="marsel.faizullin@skoltech.ru">Faizullin Marsel</author>
  <author email="g.ferrer@skoltech.ru">Gonzalo Ferrer</author>
  
  <!-- Build tool and dependencies-->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>dynamic_reconfigure</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
